WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221293
[GPUP][MSE] MediaSource::buffered and MediaSource::activeSourceBuffers do not update in the same run loop as MediaSource::endOfStream()
https://bugs.webkit.org/show_bug.cgi?id=221293
Summary
[GPUP][MSE] MediaSource::buffered and MediaSource::activeSourceBuffers do not...
Peng Liu
Reported
2021-02-02 13:30:31 PST
This leads to two failures in LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource-buffered.html.
Attachments
WIP Patch
(22.77 KB, patch)
2021-02-02 16:23 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Patch
(25.07 KB, patch)
2021-03-12 15:28 PST
,
Peng Liu
jer.noble
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Rebase the patch before landing
(25.04 KB, patch)
2021-03-12 21:25 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-02 13:31:00 PST
<
rdar://problem/73895840
>
Peng Liu
Comment 2
2021-02-02 16:23:29 PST
Created
attachment 419079
[details]
WIP Patch
Peng Liu
Comment 3
2021-03-12 15:28:48 PST
Created
attachment 423087
[details]
Patch
EWS
Comment 4
2021-03-12 19:31:56 PST
commit-queue failed to commit
attachment 423087
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 5
2021-03-12 20:33:02 PST
commit-queue failed to commit
attachment 423087
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 6
2021-03-12 20:51:14 PST
commit-queue failed to commit
attachment 423087
[details]
to WebKit repository. To retry, please set cq+ flag again.
Peng Liu
Comment 7
2021-03-12 21:25:33 PST
Created
attachment 423096
[details]
Rebase the patch before landing
EWS
Comment 8
2021-03-13 11:08:27 PST
Committed
r274390
: <
https://commits.webkit.org/r274390
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423096
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug