[GPUP][MSE] MediaSource::buffered and MediaSource::activeSourceBuffers do not update in the same run loop as MediaSource::endOfStream() https://bugs.webkit.org/show_bug.cgi?id=221293

Reviewed by Jer Noble.

Source/WebCore:

Currently, both `SourceBuffer` and `SourceBufferPrivate` own an `m_buffered`
and we need to synchronize them with a callback. When we run `SourceBufferPrivate`
in the GPU process, the synchronization might be delayed, e.g., function
`SourceBuffer::readyStateChanged()` will trigger an update to `m_buffered`
but its new value won't be available for the Web process in the same
run loop.

To fix this issue, this patch removes `SourceBuffer::m_buffered` as well
the callback to synchronize it. When we run `SourceBufferPrivate` in the GPU
process, `SourceBufferPrivateRemote` synchronizes its `m_buffered` with
`SourceBufferPrivate` through a synchronous IPC message.

No new tests. Fix a test failure:
- imported/w3c/web-platform-tests/media-source/mediasource-buffered.html

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::SourceBuffer):
(WebCore::SourceBuffer::buffered const):
(WebCore::SourceBuffer::sourceBufferPrivateBufferedRangesChanged): Deleted.
* Modules/mediasource/SourceBuffer.h:
* platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::setBufferedRanges):
(WebCore::SourceBufferPrivate::updateBufferedFromTrackBuffers):
* platform/graphics/SourceBufferPrivate.h:
(WebCore::SourceBufferPrivate::buffered const):
* platform/graphics/SourceBufferPrivateClient.h:

Source/WebKit:

When a Web process needs to "pull" the latest value of `m_buffered` from the
GPU process (`updateBufferedFromTrackBuffers`), we need to use a synchronous
IPC message.

When the GPU process needs to "push" the latest value of `m_buffered` to
a Web process, we can use an asynchronous message, e.g, `RemoveCodedFrames`
and `SourceBufferPrivateAppendComplete`.

* GPUProcess/media/RemoteSourceBufferProxy.cpp:
(WebKit::RemoteSourceBufferProxy::sourceBufferPrivateAppendComplete):
(WebKit::RemoteSourceBufferProxy::updateBufferedFromTrackBuffers):
(WebKit::RemoteSourceBufferProxy::removeCodedFrames):
(WebKit::RemoteSourceBufferProxy::sourceBufferPrivateBufferedRangesChanged): Deleted.
* GPUProcess/media/RemoteSourceBufferProxy.h:
* GPUProcess/media/RemoteSourceBufferProxy.messages.in:

* WebProcess/GPU/media/SourceBufferPrivateRemote.cpp:
(WebKit::SourceBufferPrivateRemote::updateBufferedFromTrackBuffers):
(WebKit::SourceBufferPrivateRemote::removeCodedFrames):
(WebKit::SourceBufferPrivateRemote::sourceBufferPrivateAppendComplete):
(WebKit::SourceBufferPrivateRemote::sourceBufferPrivateBufferedRangesChanged): Deleted.
* WebProcess/GPU/media/SourceBufferPrivateRemote.h:
* WebProcess/GPU/media/SourceBufferPrivateRemote.messages.in:

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/235257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274390 268f45cc-cd09-0410-ab3c-d52691b4dbfc